--- a/package.json
+++ b/package.json
@@ -14,22 +14,55 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^7.0.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-firebase/app": "^8.4.7",
+    "@react-native-firebase/ml-vision": "^7.4.13",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "~52.0.17",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
+    "expo-gl": "^13.6.0",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
+    "face-api.js": "^0.22.2",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.0",
+    "react-i18next": "^15.1.3",
     "react-native": "0.76.3",
+    "react-native-camera": "^4.2.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-otp-entry": "^1.8.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-spinkit": "^1.5.1",
+    "react-native-svg": "15.8.0",
+    "react-native-text-recognition": "^1.0.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.13",
+    "tesseract.js": "^5.1.1",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
