--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.17",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
@@ -48,6 +49,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-otp-entry": "^1.8.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
