--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
+    "express": "^4.21.2",
     "face-api.js": "^0.22.2",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
+    "jimp": "^1.6.0",
+    "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.0",
@@ -62,6 +65,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "tesseract.js": "^5.1.1",
     "yup": "^1.5.0"
