--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "expo": "~52.0.17",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-gl": "^13.6.0",
     "expo-gl-cpp": "^11.4.0",
+    "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
@@ -50,8 +52,11 @@
     "react-native": "0.76.3",
     "react-native-camera": "^4.2.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-filter-kit": "^0.8.0",
+    "react-native-image-manipulator": "^1.0.6",
     "react-native-image-picker": "^7.2.3",
     "react-native-otp-entry": "^1.8.0",
     "react-native-paper": "^5.12.5",
